Added transitions to right and left legs, added movement to right leg and added movement and transitions to both arms.

--- a/style.css
+++ b/style.css
@@ -80,6 +80,24 @@ h1 {
   margin-left: 45px;
 }
 
+.left_arm:hover {
+  transition: all 1s ease-in-out;
+  -webkit-transform: rotate(120deg);
+  -moz-transform: rotate(120deg);
+  -o-transform: rotate(120deg);
+  -ms-transform: rotate(120deg);
+  transform: rotate(120deg);
+}
+
+.right_arm:hover {
+  transition: all 1s ease-in-out;
+  -webkit-transform: rotate(-120deg);
+  -moz-transform: rotate(-120deg);
+  -o-transform: rotate(-120deg);
+  -ms-transform: rotate(-120deg);
+  transform: rotate(-120deg);
+}
+
 .left_leg:hover {
   -webkit-transform: rotate(20deg);
   -moz-transform: rotate(20deg);
@@ -91,6 +109,15 @@ h1 {
 .right_leg {
   margin-left: 120px;
   margin-top: -120px;
+}
+
+.right_leg:hover {
+  transition: all 1s ease-in-out;
+  -webkit-transform: rotate(-20deg);
+  -moz-transform: rotate(-20deg);
+  -o-transform: rotate(-20deg);
+  -ms-transform: rotate(-20deg);
+  transform: rotate(-20deg);
 }
 
 .left_eye,
